--- a/src/components/Informacion.css
+++ b/src/components/Informacion.css
@@ -22,10 +22,18 @@
     letter-spacing: -1px;   
 }
 
+.container {
+  display: inline-block;
+  position: fixed;
+  left: 63%;
+  bottom: 25%;
+}
+
 .img {
-    width: 80%;
-    height: 80%;
-    position: fixed;
-    bottom: 12%;
-    left: 38%;
-  }
+  width: 28%;
+  height: 28%;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  
+}
