--- a/src/components/Informacion.css
+++ b/src/components/Informacion.css
@@ -1,12 +1,12 @@
 .Titulo {
   color: var(--Solid-Heading, #42446e);
   font-family: Poppins, sans-serif;
-  font-size: 58px;
+  font-size: 48px;
   font-style: normal;
   font-weight: 700;
   line-height: 70px;
   letter-spacing: -1px;
-  margin-left: 15%;
+  margin-left: 20%;
 }
 
 .Nombre {
@@ -15,7 +15,7 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-family: Poppins, sans-serif;
-    font-size: 58px;
+    font-size: 48px;
     font-style: normal;
     font-weight: 700;
     line-height: 70px;
@@ -23,17 +23,21 @@
 }
 
 .container {
-  display: inline-block;
-  position: fixed;
-  left: 63%;
-  bottom: 25%;
+  display: flex;
+  align-items: center;
+}
+
+.text-container {
+  flex: 1;
+}
+
+.image-container {
+  margin-right: 5%; 
 }
 
 .img {
-  width: 28%;
-  height: 28%;
-  max-width: 100%;
-  max-height: 100%;
-  object-fit: contain;
-  
+  width: 100%;
+  height: auto;
+  max-width: 500px;
+  margin-right: 60%;
 }
